--- a/config
+++ b/config
@@ -11,7 +11,7 @@
 ;Icons : 
 
 [colors]
-background = #222
+;background = #222
 background-alt = #444
 foreground = #dfdfdf
 foreground-alt = #55
@@ -19,6 +19,34 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
+transparent = #00FFFFFF
+background = #65333333
+;foreground = #eeeeee
+white = #ffffff
+black = #000000
+
+;red = #d54e53
+;orange = #e78c45
+;yellow = #e7c547
+;green = #b9ca4a
+;blue = #7aa6da
+;aqua = #70c0b1
+;purple = #c397d8
+
+hotred = #FF0000
+red = #FF5964
+lightpink =#E799A3
+pink = #F660AB
+orange = #e78c45
+yellow = #FFE74C
+green = #6BF178
+blue = #35A7FF
+aqua = #70c0b1
+tyrian = #C45AEC
+purple = #c397d8
+silver = #C0C0C0
+gray =	#808080
+magenta	= #FF00FF
 [global/wm]
 margin-top = 5
 margin-bottom = 5
@@ -78,10 +106,10 @@ font-2 = siji:pixelsize=10;3
 font-3 = FontAwesome:pixelsize=14;2
 font-4 = B Nazanin:pixelsize=17;2
 
-modules-left = i3
+;modules-left = i3
 modules-center =
 ;modules-right =  pkg lanspeed wifispeed battery date1 date
-modules-right = backlight volume github pkg wlan vpncheck battery date powermenu
+;modules-right = backlight volume github pkg wlan vpncheck battery date powermenu
 ;modules-right = backlight volume pkg wlan vpncheck battery date powermenu
 
 
@@ -104,7 +132,7 @@ enable-ipc = true
 dpi = 72
 bottom = true
 width = 100%
-height = 18
+height = 19
 offset-x = 0
 offset-y = 0
 ;radius = 9.0
@@ -139,7 +167,7 @@ font-3 = FontAwesome:pixelsize=14;2
 modules-left = i3 
 ;modules-left = volume demo
 modules-center = 
-modules-right =  lanspeed temperature filesystem-slash filesystem-home cpu memory date volume powermenu
+modules-right =  lanspeed temperature filesystem-slash filesystem-home cpu memory date volume powermenu pkg
 ;modules-right = temperature filesystem-slash filesystem-home cpu memory
 
 tray-position = right
@@ -203,91 +231,42 @@ label-mounted = "%{F#e60053}%{F-} %percentage_used%%"
 ;label-empty-foreground = ${colors.foreground-alt}
 ;label-empty-padding = 2
 
+;---
+
 [module/i3]
 type = internal/i3
-
 pin-workspaces = true
+strip-wsnumbers = true
+index-sort = true
 
-;ws-icon-0 = 1;
-;ws-icon-1 = 2;
-;ws-icon-2 = 3;
-;ws-icon-3 = 4;
-;ws-icon-4 = 5;
-;ws-icon-5 = 6;6
-;ws-icon-6 = 7;7
-;ws-icon-7 = 8;8
-;ws-icon-8 = 9;9
-;ws-icon-9 = 10;0
-;ws-icon-10 = 11;
-;ws-icon-11 = 12;
-;ws-icon-12 = 13;
-;ws-icon-13 = 14;O
-;ws-icon-14 = 15;P
-;ws-icon-15 = 16;J
-;ws-icon-16 = 17;K
-;ws-icon-17 = 18;
-;ws-icon-18 = 19;
-;ws-icon-default = ♟
-
-;label-focused = %icon%
-label-focused-foreground = #ffffff
-label-focused-background = #3f3f3f
-label-focused-underline = #00FF65
-label-focused-padding = 1
-
-label-unfocused = %icon%
-label-unfocused-padding = 1
-
-label-visible = %icon%
-;label-visible-underline = #555555
-label-visible-padding = 1
-
-label-urgent = %icon%
-;label-urgent-foreground = #000000
-;label-urgent-background = #bd2c40
-label-urgent-padding = 1
+spacing = 1
 
 
-;Old config
-;type = internal/i3
-;format = <label-state> <label-mode>
-;index-sort = false
-;wrapping-scroll = false
-;strip-wsnumbers = true
-;pin-workspaces = false
+label-focused = %name%
+label-focused-foreground = ${colors.black}
+label-focused-background = ${colors.tyrian}
+label-focused-padding = 3
+label-focused-font = 2
 
-label-mode = %mode%
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
+label-unfocused = %name%
+label-unfocused-foreground = ${colors.white}
+label-unfocused-background = ${colors.background}
+label-unfocused-padding = 3
+label-unfocused-font = 2
 
-;label-focused = %icon%
-;label-focused-background = ${module/bspwm.label-focused-background}
-;label-focused-underline = #00FF65
-;label-focused-padding = ${module/bspwm.label-focused-padding}
+label-urgent = %name%
+label-urgent-foreground = ${colors.white}
+label-urgent-background = ${colors.red}
+label-urgent-padding = 3
+label-urgent-font = 2
 
-;label-unfocused = %icon%
-;label-unfocused-padding = ${module/bspwm.label-occupied-padding}
+label-visible = %name%
+label-visible-foreground = ${colors.foreground}
+label-visible-padding = 3
+label-visible-font = 2
 
-;label-urgent = %icon%
-;label-urgent-background = ${module/bspwm.label-urgent-background}
-;label-urgent-padding = ${module/bspwm.label-occupied-padding}
+;----
 
-;label-visible = %icon%
-;label-visible-background = ${self.label-focused-background}
-;label-visible-underline = ${self.label-focused-underline}
-;label-visible-padding = ${module/bspwm.label-occupied-padding}
-
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-;ws-icon-5 = 6;
-;ws-icon-6 = 7;
-;ws-icon-7 = 8;
-;ws-icon-8 = 9;
-;ws-icon-9 = 10;
 
 [module/github]
 type = internal/github
@@ -665,4 +644,3 @@ initial = 1
 click-left = polybar-msg -p %pid% hook demo 1
 click-right = polybar-msg -p %pid% hook demo 2
 double-click-left = polybar-msg -p %pid% hook demo 3
-
